Update calls to deprecated newInstance
Signed-off-by: Mandy Chessell <mandy_chessell@uk.ibm.com>